[project]
name = "gbsa-grub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = ["grubicy>=1.2.0,<2"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
gbsa-grub = { path = ".", editable = true }

[tool.pixi.tasks]
