[project]
name = "gbsa-grub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = ["grubicy>=1.2.0,<2"]

[package.build]
backend = { name = "pixi-build-python", version = "*" }
channels = ["https://prefix.dev/conda-forge"]


[package]
name = "gbsa-grub"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge", "openbiosim"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
gbsa-grub = { path = ".", editable = true }
gbsa-pipeline = { path = "/home/grheco/repositorios/gbsa-pipeline", editable = true }
vina="*"

[tool.pixi.tasks]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pixi.dependencies]
biosimspace = ">=2025.3.0,<2026"
pixi-pycharm = ">=0.0.10,<0.0.11"
ambertools = ">=24.8,<25"
gromacs = ">=2025.4,<2026"
openmmforcefields = ">=0.15.1,<0.16"
row = ">=1.0.0,<2"
vina = ">=1.2.6,<2"
signac = ">=2.3.0,<3"
pytest = ">=9.0.3,<10"
gemmi = ">=0.6.7,<0.7"
